# Multi_Services_Application

./: README.md
ipc_library/: CMakeLists.txt  receiver.cpp  receiver.h  receiver_main.cpp  sender.cpp  sender.h  sender_main.cpp
logger_daemon_app/: ConfigReader.cpp  Daemon.cpp  Logger.cpp  NetworkSender.cpp
logger_receiver_app/: CMakeLists.txt  connection.cpp  connection.h  server.cpp  server.h
math_operation_app/: CMakeLists.txt  main.cpp  math_operation.cpp  math_operation.h
